made some changes

--- a/about us.html
+++ b/about us.html
@@ -18,5 +18,6 @@
    Whether you're looking to lose weight, maintain a balanced lifestyle, or explore new diet-friendly meals, Jehto Food provides expert guidance and easy-to-follow meal suggestions tailored to your needs. With our user-friendly interface and smart tracking features, staying on top of your nutrition has never been easier.
     
     Join us on a journey to healthier living—one meal at a time! </p> 
+    <footer>&copy;jehtofood 2025</footer>
 </body>
 </html>
