--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,18 @@
             Facebook: Jehto Food <br>
             Instagram: @jehtofood <br>
             Twitter: @jehtofood <br>
-            For business inquiries, partnerships, or customer support, feel free to drop us a message, and we’ll get back to you as soon as possible! </p.> 
+            For business inquiries, partnerships, or customer support, feel free to drop us a message, and we’ll get back to you as soon as possible! </p.>
+            <form> <label> Full name</label>
+            <input type="text">  <br> 
+             <label>Phone number</label>
+            <input type="text"> <br>
+            <label>Email</label>
+            <input type="email">
+            </form>
+
             
             <footer> 
-                &COPY;jehtofood
+                &COPY;jehtofood 2025
 
             </footer>
 
