--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jehtofood</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <h2>Wecome!</h2> 
@@ -24,8 +25,9 @@
          <img src="cauliflower mac and cheese.jpg"alt="cauliflower mac and cheese image" style="width: 100px;"><p>cauliflower mac and cheese</p>
          <img src="collard greens pesto chickpea salad sandwiches.jpg"alt="collard greens pesto chickpea salad sandwichesimage" style="width: 100px;"><p>collard greens pesto chickpea salad sandwiches</p>
          <p>Place order</p>
-         <form> <input type="text"name="frame"</form>
+         <form> <input type="text"name="frame"></form>
          <form> <input type="submit" value="submit"></form>
+         <footer> &copy;jehtofood 2025</footer>
 
     
 </body>
