--- a/blog.html
+++ b/blog.html
@@ -14,13 +14,15 @@
         <a href=" blog.html"> Blog</a>
     </nav>
        </main>
-    <h3>Food: Your Ultimate Diet Companion </h3>
+    <h3>Jehtofood Your Ultimate Diet Companion </h3>
 
        <p>Jehto Food is a smart diet food app designed to help users achieve their health goals with personalized meal plans, calorie tracking, and expert nutrition tips.<br> Whether you're looking to lose weight, maintain a healthy lifestyle, or explore new diet-friendly recipes, Jehto Food provides an easy and convenient way to stay on track. With a user-friendly interface and a diverse range of healthy meal options, Jehto Food makes dieting effortless and enjoyable.</p>
 
        <p>Join our newsletter</p>
-       <form><input type="email"> <label for="email">email</label></form>
-       <footer> &copy;jehtofood 2025/footer>
+       <form><input type="email"> <label for="email">email</label> <br><br>
+       <input type="submit" value="submit"> </form>
+       
+       <footer> &copy;jehtofood 2025 <footer>
 
 
     
