--- a/about us.html
+++ b/about us.html
@@ -11,7 +11,9 @@
         <a href="index.html"> Home</a>
         <a href=" contact.html">Contact</a>
         <a href=" about us.html">About us</a>
-        <a href=" blog.html"> Blog</a>
+        <a href=" blog.html"> Blog</a> 
+        <a href="login_1.html"> Login</a>
+
     </nav>
        </main>
    <p>At Jehto Food, we believe that healthy eating should be simple, enjoyable, and accessible to everyone. Our mission is to help you achieve your diet goals with personalized meal plans, nutrition tracking, and a wide range of delicious, healthy recipes.<br>
