--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,8 @@
         <a href="index.html"> Home</a>
         <a href=" contact.html">Contact</a>
         <a href=" about us.html">About us</a>
-        <a href=" blog.html"> Blog</a>
+        <a href=" blog.html"> Blog</a> <a href="login_1.html"> Login</a>
+
     </nav>
        </main>
     <h3>Jehtofood Your Ultimate Diet Companion </h3>
