--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,9 @@
          <a href="index.html"> Home</a>
         <a href=" contact.html">Contact</a>
         <a href=" about us.html">About us</a>
-        <a href=" blog.html"> Blog</a> 
+        <a href=" blog.html"> Blog</a>  
+        <a href="login_1.html"> Login</a>
+
         </nav>
     </main>
     
